# bitbots_motion

./: .gitignore  Jenkinsfile  Jenkinsfile.old  README.md
bitbots_dynamic_kick/: CMakeLists.txt  package.xml
bitbots_dynamic_kick/cfg/: bitbots_dynamic_kick_params.cfg
bitbots_dynamic_kick/config/: kick_config.yaml  kick_config_unstable.yaml
bitbots_dynamic_kick/include/bitbots_dynamic_kick/: kick_engine.h  kick_node.h  kick_pywrapper.h  kick_utils.h  stabilizer.h  (+1 more)
bitbots_dynamic_kick/launch/: dynamic_kick.launch  kick.launch  test.launch  viz.launch
bitbots_dynamic_kick/msg/: KickDebug.msg  KickEngineDebug.msg
bitbots_dynamic_kick/scripts/: dummy_client.py  interactive_test.py
bitbots_dynamic_kick/src/: kick_engine.cpp  kick_node.cpp  kick_pywrapper.cpp  stabilizer.cpp  visualizer.cpp
bitbots_dynup/: CMakeLists.txt
bitbots_dynup/cfg/: bitbots_dynup_params.cfg
bitbots_dynup/config/: dynup_robot.yaml  dynup_sim.yaml  dynup_sim_darwin.yaml
bitbots_dynup/src/: dynup_engine.cpp  dynup_node.cpp
bitbots_hcm/: CMakeLists.txt  package.xml
bitbots_hcm/bitbots_hcm/hcm_dsd/: hcm.dsd
bitbots_hcm/config/: bitbots_hcm_parameters.yaml  hcm_wolfgang.yaml
bitbots_hcm/launch/: hcm.launch  test.launch
bitbots_hcm/src/: hcm.cpp  walk_node.cpp
bitbots_hcm/src/bitbots_hcm/: fall_checker.py  humanoid_control_module.py
bitbots_hcm/src/bitbots_hcm/hcm_dsd/: hcm.dsd  hcm_blackboard.py
bitbots_hcm/src/bitbots_hcm/hcm_dsd/decisions/: decisions.py
bitbots_odometry/: CMakeLists.txt  package.xml
bitbots_odometry/config/: odometry_config_template.yaml
bitbots_odometry/scripts/: calibrate_odometry.py
bitbots_odometry/src/: motion_odometry.cpp  odometry_fuser.cpp
bitbots_quintic_walk/: CMakeLists.txt  package.xml
bitbots_quintic_walk/cfg/: bitbots_quintic_walk_engine_params.cfg  bitbots_quintic_walk_params.cfg
bitbots_quintic_walk/config/: deep_quintic_pybullet_wolfgang.yaml  deep_quintic_pybullet_wolfgang_slow.yaml  deep_quintic_webots_bez.yaml  deep_quintic_webots_chape.yaml  deep_quintic_webots_nao.yaml  deep_quintic_webots_nugus.yaml  deep_quintic_webots_op3.yaml  deep_quintic_webots_robotis_op2.yaml  deep_quintic_webots_wolfgang.yaml  walk.rviz  walking_mrl_hsl_simulator.yaml  walking_nao_optimization.yaml  walking_op3_optimization.yaml  walking_reemc_optimization.yaml  walking_rfc_simulator.yaml  walking_robotis_op2_optimization.yaml  walking_talos_optimization.yaml  walking_wolfgang_optimization.yaml  walking_wolfgang_robot.yaml  walking_wolfgang_simulator.yaml  walking_wolfgang_viz.yaml
bitbots_quintic_walk/launch/: test.launch  viz.launch
bitbots_quintic_walk/scripts/: commands_to_joint_states.py  test_solvable_speeds.py
bitbots_quintic_walk/src/: QuinticWalkingNode.cpp  walk_engine.cpp  walk_ik.cpp  walk_node.cpp  walk_pywrapper.cpp  walk_stabilizer.cpp
bitbots_rl_motion/config/: rl_walk_sim.yaml
bitbots_rl_motion/launch/: test.launch
bitbots_rl_motion/scripts/: rl_walk.py
bitbots_splines/: CMakeLists.txt  package.xml
(+22 files in other folders)
